--- a/student-dashboard/src/app/create-student/create-student.css
+++ b/student-dashboard/src/app/create-student/create-student.css
@@ -1,15 +1,15 @@
 :root{
-    font-family:Arial, Helvetica, sans-serif;
+html{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .form-group { 
     margin-bottom: 15px; 
 }
 
-.form-group label { 
+.form-group label{ 
     display: block; 
     margin-bottom: 5px; 
-    font-weight: bold; 
 }
 
 .form-group input { 
@@ -35,4 +35,36 @@ button{
     color:#fff;
     border-radius: 10%;
     border: none;
+}
+
+.form-group > label {
+    flex: 0 0 150px;
+    margin-right: 12px;
+}
+
+.form-group > select{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 8px;
+}
+
+.checkbox-group label,
+.radio-group label {
+    display: inline-flex;
+    align-items: center;
+    margin-right: 1.5em;
+    white-space: nowrap;
+    padding: 0.5em;
+    margin-top: 5px;
+}
+
+.radio-group,
+.checkbox-group {
+    box-sizing: border-box;
+    border: 1px solid;
+    border-radius: 0.2em;
+}
+
+.heading{
+    font-weight: bold;
 }
