--- a/student-dashboard/src/app/create-student/create-student.html
+++ b/student-dashboard/src/app/create-student/create-student.html
@@ -1,7 +1,7 @@
 <h2>Create Student</h2>
     <form #studentForm="ngForm" (ngSubmit)="onSubmit(studentForm.value)">
     <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name" class="heading">Name</label>
         <input type="text" id="name" name="name" [(ngModel)]="student.name" required #name="ngModel">
         
         @if (name.invalid && (name.dirty || name.touched)) {
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email" class="heading">Email</label>
         <input type="email" id="email" name="email" [(ngModel)]="student.email" required email #email="ngModel">
         
         @if (email.invalid && (email.dirty || email.touched)) {
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group">
-    <label for="dob">Date of Birth</label>
+    <label for="dob" class="heading">Date of Birth</label>
     <input type="date" id="dob" name="dateOfBirth" [(ngModel)]="student.dateOfBirth" required #dobField="ngModel">
     @if (dobField.invalid && (dobField.dirty || dobField.touched)) {
         <div class="error">Date of Birth is required.</div>
@@ -27,13 +27,13 @@
     </div>
 
     <div class="form-group">
-    <label>Gender</label>
+    <label class="heading">Gender</label>
     <div class="radio-group">
-        <label>
+        <label class="radio-input">
             <input type="radio" value="Male" name="gender" [(ngModel)]="student.gender" required> Male
         </label>
         
-        <label>
+        <label class="radio-input">
             <input type="radio" value="Female" name="gender" [(ngModel)]="student.gender" required> Female
         </label>
     </div>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="form-group">
-        <label for="country">Country</label>
+        <label for="country" class="heading">Country</label>
         <select id="country" name="country" [(ngModel)]="student.country" required #countryField="ngModel">
         <option [ngValue]="''" disabled>Select Country</option>
         @for (country of countries; track country) {
@@ -57,7 +57,7 @@
     </div>
 
     <div class="form-group">
-    <label>Courses to Enroll</label>
+    <label class="heading">Courses to Enroll</label>
     <div class="checkbox-group">
         @for (course of courses; track course) {
         <label>
@@ -78,5 +78,5 @@
     }
     </div>
 
-    <button type="submit" [disabled]="studentForm.invalid">Submit</button>
+    <button type="submit" [disabled]="studentForm.invalid || student.courses.length === 0">Submit</button>
   </form>
