--- a/student-dashboard/src/app/app.component.css
+++ b/student-dashboard/src/app/app.component.css
@@ -6,6 +6,7 @@ header {
     background-color: #3f51b5; 
     color: white; 
     padding: 10px 20px; 
+    width: 100%;
 }
 
 main { 
@@ -14,8 +15,8 @@ main {
 
 nav {
   display: flex;
+  width: 100%;
   border-bottom: 1px solid #a0a0a0; 
-  background-color: #fff;
 }
 
 nav a {
@@ -23,21 +24,31 @@ nav a {
   padding: 10px 20px;
   text-decoration: none;
   color: #1967d2;
-  font-size: 16px;
+  font-size: automatic;
   display: inline-block;
   border-bottom: none;
+  padding-bottom: 2%;
 }
 
-nav a.active {
-  background-color: #fff;  
+nav a.active {  
   color: #666; 
   font-weight: 600;
-  z-index: 1;
-  margin-bottom: -1px;          
+  z-index: 1;  
+  margin-bottom: -2px;  
+  border-bottom: none;       
   border-left: 1px solid #a0a0a0;
   border-right: 1px solid #a0a0a0;
   border-top: 1px solid #a0a0a0;
-  border-bottom: none; 
   border-radius: 4px 4px 0 0; 
 }
 
+.mdc-button:hover {
+  border-radius: 0%;
+}
+
+.loader-overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+}
