--- a/student-dashboard/src/app/create-student/create-student.component.css
+++ b/student-dashboard/src/app/create-student/create-student.component.css
@@ -2,68 +2,45 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.form-group { 
+.full-width-input {
+    width: 100%;
     margin-bottom: 15px; 
 }
 
-.form-group label{ 
-    display: block; 
-    margin-bottom: 5px; 
+.form__input{ 
+    margin-bottom: 15px; 
 }
 
-.form-group input { 
-    width: 100%; 
-    padding: 8px; 
-    box-sizing: border-box; 
-}
-
-.error { 
+.error-text { 
     color: red; 
     font-size: 0.9em; 
 }
 
-button:disabled { 
-    background-color: #ccc; 
+.button__submit:disabled { 
+    background-color: #ccc !important; 
     cursor: not-allowed; 
-    color: black;
+    color: black !important;
 }
 
-button{
+.button__submit{
     padding: 0.9em;
-    background-color: #249659;
-    color:#fff;
+    background-color: #249659 !important;
+    color:#fff !important;
     border-radius: 10%;
     border: none;
+    margin-top: 2%;
 }
 
-.form-group > label {
-    flex: 0 0 150px;
-    margin-right: 12px;
-}
 
-.form-group > select{
-    width: 100%;
+.radio-group {
+    display: flex;
     box-sizing: border-box;
-    padding: 8px;
-}
-
-.checkbox-group label,
-.radio-group label {
-    display: inline-flex;
-    align-items: center;
-    margin-right: 1.5em;
-    white-space: nowrap;
     padding: 0.5em;
-    margin-top: 5px;
-}
-
-.radio-group,
-.checkbox-group {
-    box-sizing: border-box;
     border: 1px solid;
     border-radius: 0.2em;
 }
 
 .heading{
     font-weight: bold;
+    display: block;
 }
